# WorkReview

./: README.md
docs/: api-reference.md  background.md  ci-cd-pipeline.md  code-review-guide.md  getting-started.md  lessons-learned.md  methodology.md  problem-detection.md  problems.md  risk-management.md  solutions.md  testing-strategy.md  usage-guide.md
docs/checklists/: code-review-checklist.md  release-checklist.md
docs/templates/: problem-report-template.md  retrospective-template.md
sdk-demo/: BUILD.md  CMakeLists.txt  COMPLETE_DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_INDEX.md  README.md  build_simple.sh  build_vs.bat  build_xcode.sh  documentation_report.md  quick_build.bat  quick_build.sh  test_cmake.sh  test_cmake_xcode.sh  test_xcode_build.sh  validate_documentation.sh  verify_build.sh
sdk-demo/cmake/: CodeQuality.cmake  CrossPlatformSDKConfig.cmake.in  Dependencies.cmake  Format.cmake  Install.cmake  Package.cmake  StaticAnalysis.cmake
sdk-demo/examples/: CMakeLists.txt  basic_example.cpp  c_api_example.c  comprehensive_example.cpp  http_client_example.cpp  logging_example.cpp  performance_test.cpp  thread_pool_example.cpp
sdk-demo/examples/ios-app/: AppDelegate.m  CMakeLists.txt  Info.plist  SDKWrapper.h  SDKWrapper.mm  ViewController.h  ViewController.m
sdk-demo/include/sdk/: sdk_c_api.h  sdk_core.h
sdk-demo/include/sdk/logging/: logger.h
sdk-demo/include/sdk/network/: http_client.h
sdk-demo/include/sdk/platform/: platform_utils.h
sdk-demo/include/sdk/threading/: thread_pool.h
sdk-demo/src/: sdk_core.cpp
sdk-demo/src/logging/: logger.cpp
sdk-demo/src/network/: http_client.cpp
sdk-demo/src/platform/: CMakeLists.txt  file_system.cpp  platform_utils.cpp
sdk-demo/src/threading/: task_queue.cpp  thread_pool.cpp
sdk-demo/tests/: CMakeLists.txt  test_thread_pool.cpp
